--- a/src/App.css
+++ b/src/App.css
@@ -25,10 +25,17 @@ body {
   align-items: center;
 }
 
+.left-side {
+  display: grid;
+  gap: 10px;
+}
+
 .left-side p {
+
   color: #8e9497;
   max-width: 50ch;
   line-height: 1.5;
   font-size: 1.1rem;
+  margin-bottom: 2rem;
 }
 
